syntax = "proto3";

package onight.zjfae.afront.gens.v2;
option java_package="onight.zjfae.afront.gensazj";
option java_outer_classname="ReadMessagePB";
//Generated By BrewRobot:Wed Sep 20 10:06:00 CST 2017

message PBIFE_messagemanage_readMessageBatch{
	///ife/messagemanage/readMessageBatch.html


}

message Ret_PBIFE_messagemanage_readMessageBatch{
	///ife/messagemanage/readMessageBatch.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_messagemanage_readMessageBatch data=3;


}

message REQ_PBIFE_messagemanage_readMessageBatch{
	///ife/messagemanage/readMessageBatch.html

	string totalId = 1; //,消息编号批量,String,不校验,否,[id1|00][id2|01]

	string version = 2; //,版本号,String,不校验,否,


}